--- a/views/signup.pug
+++ b/views/signup.pug
@@ -21,7 +21,8 @@ block content
                 
                 div.form-group
                     label(for= 'meter') Connect to meter
-                    select( name= 'meter'  class='select form-control')
+                    select( name= 'meter'  class='select form-control' value='')
+                        option(value='' selected)
                         
                             
                         
