--- a/views/user_data.pug
+++ b/views/user_data.pug
@@ -6,7 +6,8 @@ block content
         li Email: #{user.email} 
         if (user.meter)
             li Connect to meter: #{user.meter.info}
-        
+        else 
+            li not connect to any meter
         
         li Status:
         li 
