--- a/views/users_template.pug
+++ b/views/users_template.pug
@@ -4,17 +4,9 @@ html
     title= title
     link(rel= "shortcut icon" href="#")
     script(src="https://cdn.jsdelivr.net/npm/chart.js@3.6.0/dist/chart.min.js")
+    link(rel= "stylesheet" href= "http://localhost:3000/stylesheets/users_template.css")
     link(rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous")
-    style.
-        ul {
-            list-style-type: none
-        }
-        button {
-            background-color: grey;
-            color: white;
-            font-weight: bold;
-            text-transform: uppercase;
-        }
+   
      
       
     
@@ -51,7 +43,7 @@ html
                     a(href="/admin/overview") OVERVIEW
                 div(class="overview" style= "margin-top: 30px")
                      
-                    a(href="/admin/overview") CREATE BILL
+                    a(href="/admin/create_bill") CREATE BILL
                 
                 
             div(class="col-sm-8")
