--- a/views/meter.pug
+++ b/views/meter.pug
@@ -23,5 +23,5 @@ block content
         div.form-group 
             label(for='slaveID') Modbus slave ID
             input(type= 'number' name= 'slaveId' class='form-control' placeholder= '' required)
-        button(type= "submit") Submit
+        button(class="btn btn-primary" type= "submit") Submit
         
