--- a/views/create_bill.pug
+++ b/views/create_bill.pug
@@ -1,9 +1,13 @@
 extends users_template 
 block content 
     div(id= "bill-section")
-        h4 Choose month to create invoice 
-        input(type= "month")
-        button(id="create") CREATE
-        p Working in process 
-        p Succesfull create bill 
+        p(class="text-center") Choose month to create invoice 
+        div(id ="bill")
+            input(type= "month")
+            button(class="btn-bill" id="create") CREATE
+            
+            button(class="btn-bill" id="send") SEND EMAIL
+        div(class="loader")
+   
+         
     script(src="../javascripts/create_bill.js")
