--- a/views/signup.pug
+++ b/views/signup.pug
@@ -27,7 +27,7 @@ block content
                             
                         
 
-                button(type="submit" class= 'btn btn-default') Submit
+                button(type="submit" class= 'btn btn-primary btn-lg') Submit
     script. 
         var meters= !{JSON.stringify(meters)}
         //console.log(meters[0]);
