--- a/views/user_data.pug
+++ b/views/user_data.pug
@@ -43,3 +43,4 @@ block content
 
     script(src='/javascripts/file1.js' )  
     script(src='/javascripts/view_bill.js') 
+    script(src='/javascripts/file3.js') 
