--- a/views/user_page.pug
+++ b/views/user_page.pug
@@ -19,7 +19,8 @@ html
         div(class="row display")
             div(class= "col-sm-2 menu" ) 
                 p Wellcome #{email}
-                
+                form(action='/logout' method='post')
+                    button(type="submit" class = "btn btn-primary" id= "log-out" ) Log out
                 button(class= "btn btn-primary" id= "chart") Chart 
                 button( class= "btn btn-primary" id="bill") View Bill 
             div(class= "col-sm-10")
